--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div>
                         <hr class="medium">
                         <h4><b>Classic Cupcakes</b></h4>
-                        $2.50 each<br><br>
+                        
                         Minimum order of 6 cupcakes.<br>
                         Please choose from our flavour menu listed below.<br><br>
                         <hr class="medium">
@@ -106,7 +106,7 @@
                         24 cupcakes: 4 flavours<br>
                         > 24 cupcakes: Contact me for more information :)<br>
                         *<b>even quantities of flavours</b>, for e.g. 4 Oreo Choco, 4 Double Matcha, 4 Lemon Lavender<br>
-                        <i>*Request for specially customised flavours or additional flavours, e.g. 12 cupcakes, 4 flavours: Cupcakes are $3 each</i><br>
+                        <i>*Request for specially customised flavours or additional flavours, e.g. 12 cupcakes, 4 flavours, additional cost applicable</i><br>
                         <hr class="medium">
                         <h4><b>Bakesales</b></h4>
                         We launch new/current flavours for our bakesales.<br>
@@ -114,7 +114,6 @@
                         <hr class="medium">
                         <h4><b>Customised Cupcakes</b></h4>
                         Ranges from 3D Buttercream flowers, Cartoon figures, themed cupcakes and many more.<br>
-                        Price varies from $3.50 - $4 each<br>
                         Minimum order of 12 cupcakes.<br>
                         <hr class="medium">
                         <h4><b>Flavours</b></h4>
@@ -130,7 +129,7 @@
                             </div>
                             <div class="col-md-6">
                                 <b>Oreo Choco</b><br>
-                                Oreo studded chocolate cupcake frosted with a Cookies &amp; Cream swiss meringue buttercream and a mini Oreo cookie on top.<br><br>
+                                Oreo studded chocolate cupcake frosted with a Cookies &amp; Cream swiss meringue buttercream and topped with a mini Oreo cookie<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Double Chocolate</b><br>
@@ -138,15 +137,15 @@
                             </div>
                             <div class="col-md-6">
                                 <b>Matcha White Choco</b><br>
-                                Green tea cupcake frosted with white chocolate swiss meringue buttercream, drizzled with matcha white chocolate and a matcha KitKat on top<br><br>
+                                Green tea cupcake frosted with white chocolate swiss meringue buttercream, drizzled with matcha white chocolate and topped with a matcha KitKat<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Double Matcha</b><br>
-                                Green tea cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and a matcha KitKat on top<br><br>
+                                Green tea cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and topped with a matcha KitKat<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b><font color="#FF4856">*New* </font>Chocolate Matcha</b><br>
-                                Chocolate cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and a matcha KitKat on top<br><br>
+                                Chocolate cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and topped with a matcha KitKat<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Biscoff Speculoos</b><br>
@@ -154,35 +153,39 @@
                             </div>
                             <div class="col-md-6">
                                 <b><font color="#FF4856">*New* </font>Chocolate Speculoos</b><br>
-                                Chocolate cupcake frosted with biscoff swiss meringue buttercream and a Biscoff cookie on top<br><br>
+                                Chocolate cupcake frosted with biscoff swiss meringue buttercream and topped with a Biscoff cookie<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Chocolate Orange</b><br>
-                                Chocolate cupcake frosted with an orange swiss meringue buttercream and chocolate shavings on top<br><br>
+                                Chocolate cupcake frosted with an orange swiss meringue buttercream and topped with chocolate shavings<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Lemon Rose</b><br>
-                                Lemon cupcake frosted with rosewater swiss meringue buttercream and a strawberry slice on top<br><br>
+                                Lemon cupcake frosted with rosewater swiss meringue buttercream and a topped with strawberry slice<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Lemon Lavender</b><br>
-                                Lemon cupcake frosted with two-toned lavender swiss meringue buttercream and dried lavender buds on top<br><br>
+                                Lemon cupcake frosted with two-toned lavender swiss meringue buttercream and topped with dried lavender buds<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Earl Grey Lavender</b><br>
-                                Earl grey cupcake filled with earl grey white chocolate filling, frosted with two-toned lavender swiss meringue buttercream and dried lavender buds on top<br><br>
+                                Earl grey cupcake filled with earl grey filling, frosted with two-toned lavender swiss meringue buttercream and topped with dried lavender buds<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Blueberry Lime</b><br>
-                                Vanilla cupcake filled with fresh blueberry puree, frosted with lime swiss meringue buttercream and fresh blueberries on top<br><br>
+                                Vanilla cupcake filled with fresh blueberry puree, frosted with lime swiss meringue buttercream and topped with fresh blueberries<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b><font color="#FF4856">*New* </font>Blueberry White Chocolate</b><br>
-                                Vanilla cupcake filled with fresh blueberry puree, frosted with white chocolate swiss meringue buttercream and fresh blueberries on top<br><br>
+                                Vanilla cupcake filled with fresh blueberry puree, frosted with white chocolate swiss meringue buttercream and topped with fresh blueberries<br><br>
+                            </div>
+                            <div class="col-md-6">
+                                <b><font color="#FF4856">*New* </font>Peanut Butter</b><br>
+                                Peanut butter cupcake frosted with peanut butter swiss meringue buttercream and topped with crushed reeses<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Nutella Marshmallow</b><br>
-                                Nutella filled marshmallow chocolate cupcake with a Nutella swiss meringue buttercream and mini marshmallows on top<br>
+                                Nutella filled marshmallow chocolate cupcake with a Nutella swiss meringue buttercream and topped with mini marshmallows<br>
                             </div>
                         </div>
                     </div>
