--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/04.jpg">
                                 <b>Matcha White Choco</b><br>
-                                Green tea cupcake frosted with white chocolate swiss meringue buttercream, drizzled with matcha white chocolate and topped with a matcha KitKat<br>
+                                Green tea cupcake frosted with white chocolate swiss meringue buttercream, topped with a matcha KitKat<br>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/05.jpg">
                                 <b>Double Matcha</b><br>
-                                Green tea cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and topped with a matcha KitKat<br>
+                                Green tea cupcake frosted with green tea swiss meringue buttercream, topped with a matcha KitKat<br>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/06.jpg">
-                                <b><font color="#FF4856">*New* </font>Chocolate Matcha</b><br>
-                                Chocolate cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and topped with a matcha KitKat<br>
+                                <b>Chocolate Matcha</b><br>
+                                Chocolate cupcake frosted with green tea swiss meringue buttercream, topped with a matcha KitKat<br>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -142,7 +142,7 @@
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/09.jpg">
-                                <b><font color="#FF4856">*New* </font>Chocolate Speculoos</b><br>
+                                <b>Chocolate Speculoos</b><br>
                                 Chocolate cupcake frosted with biscoff swiss meringue buttercream and topped with a Biscoff cookie<br>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/14.jpg">
                                 <b>Earl Grey Lavender</b><br>
-                                Earl grey cupcake filled with earl grey filling, frosted with two-toned lavender swiss meringue buttercream and topped with dried lavender buds<br>
+                                Earl grey cupcake with earl grey filling, frosted with two-toned lavender swiss meringue buttercream and topped with dried lavender buds<br>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -191,7 +191,8 @@
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/15.jpg">
-                                <b><font color="#FF4856">*New* </font>Peanut Butter</b><br>
+<!--                                <b><font color="#FF4856">*New* </font>-->
+                                Peanut Butter</b><br>
                                 Peanut butter cupcake frosted with peanut butter swiss meringue buttercream and topped with crushed reeses<br><br>
                             </div>
                         </div>
@@ -205,7 +206,8 @@
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/18.jpg">
-                                <b><font color="#FF4856">*New* </font>Blueberry White Chocolate</b><br>
+<!--                                <font color="#FF4856">*New* </font>-->
+                                <b>Blueberry White Chocolate</b><br>
                                 Vanilla cupcake, filled with homemade blueberry puree, frosted with white choco swiss meringue buttercream and topped with fresh blueberries<br>
                             </div>
                         </div>
