minimum cupcake flavours

--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
                         Minimum order of 12 cupcakes<br>
                         Please choose from our flavour menu<br><br>
 
-                        12 – 18 cupcakes : choice of 3 flavours<br>
+                        12 cupcakes : choice of 3 flavours<br>
+                        18 cupcakes : choice of 3 flavours<br>
                         24 cupcakes  : choice of 4 flavours<br>
                         For a higher quantity order, kindly contact us directly<br><br>
 
-                        Packaged in box of 6<br>
                         Even quantities of flavours<br>
                         <hr class="medium">
                         <h4><b>Customised Cupcakes</b></h4>
@@ -287,7 +287,6 @@
                         Choice of filling : Nutella, Speculoos, White Chocolate<br>
                         Vanilla buttercream<br><br>
 
-                        Packaged in box of 6<br>
                         
                         <hr class="medium">
                         <h4><b>Packaging</b></h4>
