Amendment for lemon rose cupcake

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/new/13.jpg">
                                 <b>Lemon Rose</b><br>
-                                Lemon cupcake frosted with rosewater swiss meringue buttercream and a topped with strawberry slice<br>
+                                Lemon cupcake frosted with rosewater swiss meringue buttercream and topped with dried rose buds<br>
                             </div>
                         </div>
                         <div class="col-md-3">
